--- a/css.css
+++ b/css.css
@@ -75,7 +75,7 @@ caption {
 
 table {
     width: 20%;
-    margin: 0px 640px;
+    margin: auto;
     border-radius: 7px;
     border-color: aliceblue;
     background-color: blue;
